--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -136,6 +136,7 @@ deny 141.164.38.67;
 deny 141.98.11.62;
 deny 142.44.133.81;
 deny 144.126.133.74;
+deny 144.172.84.103;
 deny 146.59.126.232;
 deny 146.59.231.4;
 deny 147.45.116.145;
@@ -237,6 +238,7 @@ deny 185.100.87.136;
 deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
+deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -581,6 +583,7 @@ deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
+deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.237.221.228;
 deny 193.239.232.102;
@@ -604,7 +607,19 @@ deny 194.87.55.98;
 deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
+deny 195.47.238.176;
 deny 195.47.238.44;
+deny 195.47.238.82;
+deny 195.47.238.83;
+deny 195.47.238.84;
+deny 195.47.238.86;
+deny 195.47.238.87;
+deny 195.47.238.88;
+deny 195.47.238.89;
+deny 195.47.238.90;
+deny 195.47.238.91;
+deny 195.47.238.92;
+deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -977,6 +992,7 @@ deny 2602:f6f6:2:69ed::1;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cd1f::1;
 deny 2602:f6f6:2:d31a::1;
+deny 2602:fa59:4:246::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:10:bb36::1;
@@ -1055,6 +1071,7 @@ deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
+deny 2605:6400:40:fe09::2;
 deny 2605:a140:2262:7686::1;
 deny 2605:a141:2261:4410::1;
 deny 2605:a142:2263:1906::1;
@@ -1292,6 +1309,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1464,6 +1482,18 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
+deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
+deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+deny 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
+deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
+deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
@@ -1511,6 +1541,7 @@ deny 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
+deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
@@ -1543,6 +1574,7 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:23ae:4067:bed4:a129;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
@@ -1708,7 +1740,10 @@ deny 45.141.215.95;
 deny 45.141.215.97;
 deny 45.145.93.133;
 deny 45.148.10.111;
+deny 45.61.185.172;
+deny 45.61.186.203;
 deny 45.61.187.200;
+deny 45.61.188.15;
 deny 45.66.35.10;
 deny 45.66.35.20;
 deny 45.66.35.21;
