--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -238,6 +238,7 @@ allow 185.100.87.136;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -264,7 +265,6 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.132.53.6;
-allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -1307,6 +1307,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
