--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -14,6 +14,7 @@ set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
+set_real_ip_from 2001:41d0:701:1100::57d3;
 set_real_ip_from 2001:41d0:805:d300::2b19:1929;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
@@ -446,7 +447,6 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
-set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -633,7 +633,6 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
-set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:8140:1fff:2a21::1;
@@ -680,7 +679,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
-set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
